[package]
name = "helix-tui"
version = "0.2.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
description = """
A library to build rich terminal user interfaces or dashboards
"""
edition = "2018"
license = "MPL-2.0"

[dependencies]
bitflags = "1.0"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termwiz = "0.13"
serde = { version = "1", "optional" = true, features = ["derive"]}
